# MockVM

./: .gitignore  CMakeLists.txt  Codes.md  README.md
.github/workflows/: main.yml
CMake/: CMakeLists.txt  CopyTarget.cmake  StaticRuntime.cmake  TestConfig.h.in
Source/: BinaryWriter.cpp  BinaryWriter.h  BlockReader.cpp  BlockReader.h  CMakeLists.txt  Compiler.cpp  Decl.h  Declarations.h  Instruction.h  Parser.cpp  Parser.h  Program.cpp  Program.h  Scanner.cpp  Scanner.h  StateTable.inl  SymbolUtils.cpp  SymbolUtils.h  Test.asm  TimeCheck.cpp  VM.cpp  test
Source/libtvm/: ArrayStack.h  BinaryWriter.cpp  BinaryWriter.h  BlockReader.cpp  BlockReader.h  CMakeLists.txt  Declarations.h  Keywords.inl  MemoryStream.cpp  MemoryStream.h  Parser.cpp  Parser.h  Program.cpp  Program.h  SharedLib.cpp  SharedLib.h  SymbolUtils.cpp  SymbolUtils.h
Source/stdlib/: CMakeLists.txt  stdlib.cpp
Source/tcom/: CMakeLists.txt  Compiler.cpp
Source/tdbg/: CMakeLists.txt  Color.h  Console.cpp  Console.h  ConsoleCurses.cpp  ConsoleCurses.h  ConsoleWindows.cpp  ConsoleWindows.h  Debugger.cpp  Debugger.h  InstructionWriter.cpp  InstructionWriter.h  Main.cpp  Types.h
Source/tdbg/Win32/: Scheme.xlsm  ncurses.h  tdbg.ini  unistd.h
Source/tvm/: CMakeLists.txt  VM.cpp
Test/: BlockReader.cpp  CMakeLists.txt  CR.asm  CRLF.asm  Catch2.h  Comment.asm  Compact.asm  Factoral.asm  ForLoop.asm  IfElse.asm  Keywords.asm  Label.asm  Macro.h  MemoryStream.cpp  ParseArg.ans  ParseArg.asm  Parser.cpp  PrintRegister.ans  PrintRegister.asm
Test/Basic/: Bug1.asm  CRLF.asm  Comment.ans  Comment.asm  Data1.ans  Data1.asm  Data2.asm  Factorial.asm  ForLoop.asm  IfElse.asm  Keywords.ans  Keywords.asm  LF.asm  Label.asm  ParseArg.asm  PrintRegister.ans  Rec1.ans  Rec1.asm  Reg1.ans  Reg1.asm  Reg2.ans  Reg2.asm  Reg3.asm  TestPutChar.asm
Test/Errors/: Err1.ans  Err1.asm  Err2.ans  Err2.asm  Err3.ans  Err3.asm  Err4.ans  Err4.asm
Test/Exec/: Add1.asm  Add2.asm  Add3.ans  Add3.asm  Add4.ans  Add4.asm  Base.ans  Base.asm  Div1.asm  Fib1.asm  Mul1.ans  Mul1.asm  Sqrt.ans  Sqrt.asm  Sub1.asm  Sub2.asm  ptri.ans  ptri.asm
Test/Scan/: Scan2.asm  Scan3.asm  Scan4.asm  Scan5.asm  Scan6.asm
Test/catch/: catch.hpp
Test/fcmp/: CMakeLists.txt  Main.cpp
